--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
+    "@thirdweb-dev/react": "^2.0.3",
+    "@thirdweb-dev/sdk": "^2.0.24",
     "clsx": "^1.1.1",
+    "ethers": "^5.6.2",
     "next": "^12.1.0",
     "nextjs-progressbar": "^0.0.13",
     "react": "^17.0.2",
